--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
   <script type="text/javascript">
     window['_gaUserPrefs'] = {
-      ioo: function() {
+      ioo: function () {
         return true;
       },
     };
@@ -23,7 +23,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto:400,700"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./assesta/style.css" />
+    <link rel="stylesheet" href="./assets/style.css" />
     <script src="./src/main.js" type="module"></script>
   </head>
   <body data-new-gr-c-s-check-loaded="14.983.0" data-gr-ext-installed="">
@@ -66,7 +66,7 @@
         </section>
         <section class="contributors-container whiteframe">
           <div class="contributor-header">Contributions</div>
-          <ul class="contributor-list"></ul>
+          <ul id="contributor-list" class="contributor-list"></ul>
         </section>
       </main>
     </div>
