--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
           id="repo-select"
           class="repo-select"
           autofocus="autofocus"
+          hidden
         ></select>
       </header>
       <div></div>
