Add error handing

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           hidden
         ></select>
       </header>
-      <div></div>
+      <div id="error-container"></div>
       <main class="main-container">
         <section class="repo-container whiteframe">
           <div class="card-container">
