Add index.js file

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./assets/style.css" />
-    <script src="./src/App.js" type="module"></script>
+    <script src="./src/index.js" type="module"></script>
   </head>
   <body>
     <div id="root"></div>
